# My-Own-Cursor

./: README.md  bubble.py  chat_memory.py  main.py  pyproject.toml  requirements.txt  tool_registry.py
.sessions/: 20250817-225635.jsonl  20250817-230952.jsonl  20250817-231247.jsonl  20250817-231318.jsonl  20250817-231404.jsonl  20250817-232116.jsonl  20250817-232444.jsonl  20250817-232918.jsonl  20250817-234137.jsonl  20250817-235126.jsonl  20250817-235611.jsonl  20250817-235757.jsonl  20250817-235905.jsonl  20250818-000026.jsonl  20250818-000847.jsonl  20250818-205252.jsonl  20250820-203716.jsonl  20250820-213748.jsonl  20250820-214845.jsonl  20250820-215127.jsonl  20250820-215355.jsonl  20250820-215947.jsonl  20250820-220737.jsonl  20250820-221147.jsonl  20250820-221301.jsonl
ai_ide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: __init__.py  code_runner.py  file_tools.py  planner_tool.py  project_generator.py  shell_tool.py
