[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ide"
version = "0.1.0"
description = "Terminal-first AI IDE with agentic tools"
readme = "README.md"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "ide", "agent", "cli"]
dependencies = [
  "python-dotenv",
  "openai>=1.30.0",
  "rich",
  "httpx>=0.27.0",
  "prompt_toolkit>=3.0.0",
  "black>=24.0.0",
  "ruff>=0.5.0",
  "pytest>=8.0.0",
]

# Use top-level modules and the tools package
# main.py, chat_memory.py, tool_registry.py are modules at repo root
# tools/ is a package
[tool.setuptools]
py-modules = ["main", "chat_memory", "tool_registry"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[project.scripts]
ai-ide = "main:main"

